03-node-app/04-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-node-app-ingress
  # namespace: default
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`who.demo.local`)
      middlewares:
      kind: Rule
      services:
        - name: nginx-node
          port: 80
  # tls:
  #   certResolver: letsencrypt
